--- a/codestar/templates/base.html
+++ b/codestar/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %}
-
 {% url 'home' as home_url %}
+{% url 'about' as about_url %}
 
 <!DOCTYPE html>
 <html class="h-100" lang="en">
@@ -23,7 +23,7 @@
 
 
     <!-- Custom CSS -->
-<link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
 
 </head>
@@ -44,6 +44,13 @@
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == home_url %}active{% endif %}" aria-current="page"
                             href="{% url 'home' %}">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link
+                           {% if request.path == about_url %}active{%endif%}"
+                           aria-current="page"
+                           href="{% url 'about' %}"
+                           >About</a>
                     </li>
 
                 </ul>
@@ -66,7 +73,7 @@
     <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-white">
             {% block copyright %}
-              Made by Code Instituters
+            Made by Code Instituters
             {% endblock copyright %}
         </p>
 
