--- a/codestar/templates/base.html
+++ b/codestar/templates/base.html
@@ -1,43 +1,38 @@
-<!-- {% load static %}
+{% load static %}
 
 {% url 'home' as home_url %}
-{% url 'about' as about_url %}
 {% url 'account_login' as login_url %}
 {% url 'account_signup' as signup_url %}
-{% url 'account_logout' as logout_url %} -->
+{% url 'account_logout' as logout_url %}
 
-
-
-<!-- <!DOCTYPE html>
+<!DOCTYPE html>
 <html class="h-100" lang="en">
 
 <head>
     <title>CodeStar Blog</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    Google Fonts CSS -->
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com">
+    <!-- Google Fonts CSS -->
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;700&display=swap" rel="stylesheet">
 
     <!-- Font Awesome CSS -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 
     <!-- Bootstrap CSS -->
-    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"> -->
-
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 
     <!-- Custom CSS -->
-    <!-- <link rel="stylesheet" href="{% static 'css/style.css' %}"> -->
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
+</head>
 
-<!-- </head>
-
-<body class="d-flex flex-column h-100 main-bg"> -->
+<body class="d-flex flex-column h-100 main-bg">
 
     <!-- Navigation -->
-    <!-- <nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <nav class="navbar navbar-expand-lg navbar-light bg-white">
         <div class="container-fluid">
             <a class="navbar-brand" href="{% url 'home' %}"><span class="brand">c<span class="red-o">o</span>de<span
                         class="thin">|star</span></span></a>
@@ -53,10 +48,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link
-                           {% if request.path == about_url %}active{%endif%}" aria-current="page"
+                          {% if request.path == about_url %}active{%endif%}" aria-current="page"
                             href="{% url 'about' %}">About</a>
                     </li>
-
                     {% if user.is_authenticated %}
                     <li class="nav-item">
                         <a class="nav-link {% if request.path == logout_url %}active{% endif %}" aria-current="page"
@@ -72,7 +66,6 @@
                             href="{% url 'account_login' %}">Login</a>
                     </li>
                     {% endif %}
-
                 </ul>
                 <span class="navbar-text text-muted">
                     adventures of a software developer
@@ -82,26 +75,20 @@
     </nav>
 
     <main class="flex-shrink-0 main-bg">
-        {% if user.is_authenticated %}
-        <p class="text-end m-3">You are logged in as {{ user }}</p>
-        {% else %}
-        <p class="text-end m-3">You are not logged in</p>
-        {% endif %}
 
-        {% block content %} -->
+        {% block content %}
         <!-- Content Goes here -->
-        <!-- {% endblock content %}
+        {% endblock content %}
 
-    </main> -->
+    </main>
 
     <!-- Footer -->
-    <!-- <footer class="footer mt-auto py-3 dark-bg">
+    <footer class="footer mt-auto py-3 dark-bg">
         <p class="m-0 text-center text-white">
             {% block copyright %}
             Made by Code Instituters
             {% endblock copyright %}
         </p>
-
         <p class="m-0 text-center text-white">Follow us: <i class="fab fa-facebook-square ms-3"></i>
             <i class="fab fa-twitter-square ms-3"></i>
             <i class="fab fa-instagram-square ms-3"></i>
@@ -112,8 +99,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
         </script>
-
-    <script src="{% static 'js/script.js'%}"></script>
+    <script src="{% static 'js/script.js' %}"></script>
 </body>
 
-</html> -->
+</html>
