--- a/templates/base.html
+++ b/templates/base.html
@@ -130,6 +130,9 @@
         </script>
 
     <script src="{% static 'js/script.js'%}"></script>
+
+    {% block extras %}
+    {% endblock %}
 </body>
 
 </html>
